Tue Dec 10 00:49:35 2002  Kristian Rietveld  <kris@gtk.org>

	* gdk/gdkpixmap.h (gdk_pixmap_new), (gdk_bitmap_create_from_data),
	(gdk_pixmap_create_from_xpm), (gdk_pixmap_colormap_create_from_xpm),
	(gdk_pixmap_create_from_xpm_d),
	(gdk_pixmap_colormap_create_from_xpm_d): update to allow a
	GdkDrawable instead of a GdkWindow.

	* gdk/gdkpixmap.c (gdk_pixmap_colormap_create_from_xpm),
	(gdk_pixmap_create_from_xpm), (gdk_pixmap_colormap_create_from_xpm_d),
	(gdk_pixmap_create_from_xpm_d): update to allow a GdkDrawable
	instead of a GdkWindow.

	* gdk/linux-fb/gdkpixmap-fb.c (gdk_pixmap_new),
	(gdk_bitmap_create_from_data), (gdk_pixmap_create_from_data): update
	to allow a GdkDrawable instead of a GdkWindow.

	* gdk/x11/gdkpixmap-x11.c (gdk_pixmap_new),
	(gdk_bitmap_create_from_data), (gdk_pixmap_create_from_data): likewise

Mon Dec  9 17:31:06 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkiconfactory.c (icon_size_lookup_intern): Remove
	unnecessary leftover check that was causing a UMR.
	(#100768, Kjartan Maraas)

Mon Dec  9 19:11:22 2002  Artis Trops  <hornet@navigator.lv>

	* configure.in: Added Latvian (lv) to ALL_LINGUAS.

Mon Dec  9 10:44:59 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkcolor-x11.c (gdk_colormap_alloc_colors_private):
	Fix a bug in one of my earlier changes. (From Naofumi Yasufuku,
	#100023)

Sun Dec  8 21:43:31 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkcolor-x11.c: Fix spacing in a bunch of 
	for (i=0; i<ncolors; i++).

	* gdk/x11/gdkcolor-x11.c: Various g_return_if_fail()
	cleanup.

Sun Dec  8 21:29:10 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkcolor-x11.c (gdk_colormap_alloc1): Fix
	a lost refcount in the case where we get a duplicate
	back from the X server.

	* gdk/x11/gdkcolor-x11.c (gdk_colormap_alloc_colors_writeable):
	Set success[] for all colors when allocation of colors
	cells via XAllocColorCells succeeds.

	* gdk/x11/gdkcolor-x11.c (gdk_colormap_alloc_colors_private):